# app.js
@@ -1,15 +1,13 @@
-require('dotenv').config()
 var createError     = require('http-errors')
 var express         = require('express')
 var path            = require('path')
 var cookieParser    = require('cookie-parser')
 var logger          = require('morgan')
-var env             = require('dotenv').config()
 var indexRouter     = require('./routes/index')
-var usersRouter     = require('./routes/users')
+var authRouter      = require('./routes/auth')
 const swaggerUi     = require('swagger-ui-express')
 const swaggerDoc    = require('./swagger.json')
-var app = express()
+var app             = express()
 
 // view engine setup
 app.set('views', path.join(__dirname, 'views'))
@@ -21,8 +19,9 @@ app.use(express.urlencoded({ extended: false }))
 app.use(cookieParser())
 app.use(express.static(path.join(__dirname, 'public')))
 
+
 app.use('/', indexRouter)
-app.use('/users', usersRouter)
+app.use('/auth', authRouter)
 
 var options = {
   explorer: true
