# controllers/users.js
@@ -1,0 +1,9 @@
+var User = require('../model/appModel.js');
+
+exports.login = (request) => {
+   return User.findUserByUsernamePassword(request.username, request.password)
+};
+
+exports.saveNewToken = (userId, token) =>{
+   return User.updateUserToken(userId, token)
+}
