# swagger.json
@@ -2,16 +2,11 @@
     "swagger": "2.0",
     "info": {
       "version": "1.0.0",
-      "title": "VanArts Mobile App Development 2019 Term 4",
+      "title": "Mobile App Development - 2019",
       "license": {
         "name": "MIT"
       }
     },
-    "host": "http://vanapi.gitsql.net/api-docs",
-    "basePath": "/v1",
-    "schemes": [
-      "http"
-    ],
     "consumes": [
       "application/json"
     ],
@@ -19,12 +14,42 @@
       "application/json"
     ],
     "paths": {
+        "/auth": {
+            "post": {
+                "summary": "Authenticate a user",
+
+                "tags": [
+                  "Authentication"
+                ],
+                "parameters": [
+                  {
+                    "in": "body",
+                    "name": "body",
+                    "description": "Authentication object",
+                    "required": true,
+                    "schema": {
+                      "$ref": "#/definitions/Authentication"
+                    }
+                  }
+                ],
+                "responses": {
+                  "200": {
+                    "description": "Null response"
+                  },
+                  "default": {
+                    "description": "unexpected error",
+                    "schema": {
+                      "$ref": "#/definitions/Error"
+                    }
+                  }
+                }
+              }
+          },
       "/contacts": {
         "get": {
           "summary": "List all contacts",
-          "operationId": "listcontacts",
           "tags": [
-            "contacts"
+            "Contacts"
           ],
           "parameters": [],
           "responses": {
@@ -50,9 +75,8 @@
         },
         "post": {
           "summary": "Create a contact",
-          "operationId": "createContacts",
           "tags": [
-            "contacts"
+            "Contacts"
           ],
           "responses": {
             "201": {
@@ -70,9 +94,8 @@
       "/contacts/{contactId}": {
         "get": {
           "summary": "Info for a specific contact",
-          "operationId": "showContactById",
           "tags": [
-            "contacts"
+            "Contacts"
           ],
           "parameters": [
             {
@@ -97,24 +120,91 @@
               }
             }
           }
+        },
+        "put": {
+            "summary": "Update a specific contact",
+            "tags": [
+              "Contacts"
+            ],
+            "parameters": [
+              {
+                "name": "contactId",
+                "in": "path",
+                "required": true,
+                "description": "The id of the contact to retrieve",
+                "type": "string"
+              }
+            ],
+            "responses": {
+              "200": {
+                "description": "Expected response to a valid request",
+                "schema": {
+                  "$ref": "#/definitions/Contacts"
+                }
+              },
+              "default": {
+                "description": "unexpected error",
+                "schema": {
+                  "$ref": "#/definitions/Error"
+                }
+              }
+            }
+        },
+        "delete": {
+            "summary": "Delete a specific contact",
+            "operationId": "deleteContactById",
+            "tags": [
+              "Contacts"
+            ],
+            "security": {
+              "type": "basicAuth"
+            },
+            "parameters": [
+              {
+                "name": "contactId",
+                "in": "path",
+                "required": true,
+                "description": "The id of the contact to retrieve",
+                "type": "string"
+              }
+            ],
+            "responses": {
+              "200": {
+                "description": "Expected response to a valid request",
+                "schema": {
+                  "$ref": "#/definitions/Contacts"
+                }
+              },
+              "default": {
+                "description": "unexpected error",
+                "schema": {
+                  "$ref": "#/definitions/Error"
+                }
+              }
+            }
         }
       }
     },
     "definitions": {
       "Contact": {
         "required": [
-          "id",
-          "name"
+          "id"
         ],
         "properties": {
           "id": {
             "type": "integer",
             "format": "int64"
           },
-          "name": {
+          "userId": {
+            "type": "int64"
+          },
+          "firstName": {
             "type": "string"
           },
-          "tag": {
+          "lastName": {
+            "type": "string"
+          },
+          "contactNumber": {
             "type": "string"
           }
         }
@@ -123,6 +213,20 @@
         "type": "array",
         "items": {
           "$ref": "#/definitions/Contact"
+        }
+      },
+      "Authentication": {
+        "required": [
+          "username",
+          "password"
+        ],
+        "properties": {
+          "username": {
+            "type": "string"
+          },
+          "password": {
+            "type": "string"
+          }
         }
       },
       "Error": {
